--- a/project0/game.ipynb
+++ b/project0/game.ipynb
@@ -1,31 +1,40 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Игра \"угадай число\"\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ваш алгоритм угадывает число в среднем за: 101 попыток\n"
+      "Ваш алгоритм угадывает число в среднем за: 5 попыток\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "101"
+       "5"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import game2\n",
-    "game2.score_game(game2.random_predict)"
+    "from game2 import score_game\n",
+    "from game2 import random_predict\n",
+    "score_game(random_predict) #вызов функции"
    ]
   }
  ],
